Add section contact

--- a/index.html
+++ b/index.html
@@ -12,21 +12,29 @@
 <body>
     <header>
         <nav class="navbar fixed-top navbar-light">
-            <a class="logo" href="#">VDias</a>
-            <a class="btn btn-outline-success" href="http://www.google.com">Portfolio</a>
-            <a class="btn btn-outline-warning" href="http://www.google.com">PensandoAinda</a>
+            <a class="logo" role="button" href="#">VDias</a>
+            <div class="nav-buttons">
+                <a class="btn btn-outline-success" role="button" href="http://www.google.com">Portfolio</a>
+                <a class="btn btn-outline-warning" role="button" href="http://www.google.com">PensandoAinda</a>
+            </div>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Search</button>
             </form>
         </nav>
     </header>
+    <main>
     <section class="home">
         <div class="container">
-            <div class="introtext">
-                <p class="skills">Front-End Developer at Loeffa Web Solution</p>
+            <div class="intro-text">
+                <p class="skills">Front-End Developer</p>
                 <hr class="star-bright">
-                <img src="img/eu.jpg" alt="myPhoto" class="mx-auto d-block img-home">
+            </div>
+            <div class="social-media mx-auto d-block">
+                <a class="btn btn-outline-success" href="http://www.google.com">Facebook</a>
+                <a class="btn btn-outline-warning" href="http://www.google.com">Instagram</a>    
+                <a class="btn btn-outline-warning" href="http://www.google.com">Github</a>    
+                <a class="btn btn-outline-warning" href="http://www.google.com">LinkedIn</a>    
             </div>
         </div>
     </section>
@@ -39,11 +47,31 @@
                 <li><a href="https://github.com/ViniciusmDias/readingTyping">ReadingTyping</a></li>
                 <li><a href="https://github.com/ViniciusmDias/ronaldinhoTribute">Ronaldinho Tribute</a></li>
                 <li><a href="https://github.com/ViniciusmDias/bootstrap">Bootstrap Translate</a></li>
+            </ul> 
+            <h2>2017</h2>
+            <ul>
+                <li><a href="https://github.com/ViniciusmDias/JogoDaVelha">Tic Tac Toe</a></li>
             </ul>
-
         </div>
     </section>
-    <section>
+    <section class="contact">
+        <div class="container">
+            <h1 class="contact-title">Contact</h1>
+            <hr class="star-dark">
+            <div class="row">
+                <div class="col-md-8 contact-text">
+                    <p>Connect with Vinicius Dias:</p>
+                    <p>vinicius-mdias@hotmail.com</p>
+                    <img src="img/eu.jpg" alt="myPhoto" class="mx-auto d-block img-home">
+                </div>
+                <div class="col-md-4 contact-buttons">
+                    <a class="btn btn-outline-success" href="http://www.google.com">Facebook</a>
+                    <a class="btn btn-outline-warning" href="http://www.google.com">Instagram</a>    
+                    <a class="btn btn-outline-warning" href="http://www.google.com">Github</a>    
+                    <a class="btn btn-outline-warning" href="http://www.google.com">LinkedIn</a>    
+                </div>
+            </div>
+        </div>
         
     </section>
     <section>
