--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 </head>
 <body>
     <header class="navbar fixed-top navbar-light">
-            <a class="logo" href="#">VDias</a>
+            <a class="logo" href="#">ViniDias</a>
             <nav class="site-nav">
                 <ul>
                 <li ><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#jobs">Jobs</a></li>
                 </ul>
             </nav>
             <div class="nav-social">
@@ -28,14 +30,15 @@
     <section class="home">
         <div class="container">
             <div class="intro-text">
-                <p class="skills">Front-End Developer</p>
+                <p class="intro-description">Hi I'm Vinicius Dias
+                <br>I'm a web Developer</p>
                 <hr class="star-bright">
             </div>
             <div class="social-media mx-auto d-block">
-                <a class="btn btn-outline-success" href="https://www.freecodecamp.org/viniciusmdias">FreeCodeCamp</a>
-                <a class="btn btn-outline-warning" href="https://www.instagram.com/diasvini10/">Instagram</a>    
-                <a class="btn btn-outline-warning" href="https://github.com/ViniciusmDias">Github</a>    
-                <a class="btn btn-outline-warning" href="https://www.linkedin.com/in/vinicius-m-dias/">LinkedIn</a>    
+                <a class="btn btn-success" href="https://www.freecodecamp.org/viniciusmdias"><i class="fab fa-free-code-camp"></i> FreeCodeCamp</a>
+                <a class="btn btn-warning" href="https://www.instagram.com/diasvini10/"><i class="fab fa-instagram"></i> Instagram</a>    
+                <a class="btn btn-warning" href="https://github.com/ViniciusmDias"><i class="fab fa-github"></i> Github</a>    
+                <a class="btn btn-warning" href="https://www.linkedin.com/in/vinicius-m-dias/"><i class="fab fa-linkedin"></i> LinkedIn</a>    
             </div>
         </div>
     </section>
@@ -45,13 +48,37 @@
             <hr class="star-dark">
             <h2>2018</h2>
             <ul>
-                <li><a href="https://github.com/ViniciusmDias/readingTyping">ReadingTyping</a></li>
-                <li><a href="https://github.com/ViniciusmDias/ronaldinhoTribute">Ronaldinho Tribute</a></li>
-                <li><a href="https://github.com/ViniciusmDias/bootstrap">Bootstrap Translate</a></li>
+                <li><a href="https://github.com/ViniciusmDias/readingTyping">readingTyping</a></li>
+                <li><a href="https://github.com/ViniciusmDias/ronaldinhoTribute">ronaldinhoTribute</a></li>
+                <li><a href="https://github.com/ViniciusmDias/bootstrap">bootstrapTranslate</a></li>
             </ul> 
             <h2>2017</h2>
             <ul>
-                <li><a href="https://github.com/ViniciusmDias/JogoDaVelha">Tic Tac Toe</a></li>
+                <li><a href="https://github.com/ViniciusmDias/JogoDaVelha">ticTacToe</a></li>
+            </ul>
+        </div>
+    </section>
+    <section class="skills">
+        <div class="container">
+            <h1 class="skills-title" id="skills">Skills</h1>
+            <hr class="star-dark">
+            <h2>Front End</h2>
+            <ul>
+                <li>Html</li>
+                <li>Css</li>
+                <li>JavaScript</li>
+                <li>JQuery</li>
+            </ul> 
+            <h2>Back End</h2>
+            <ul>
+                <li>nodeJs</li>
+                <li>Python</li>
+                <li>Django</li>
+            </ul> 
+            <h2>Other Skills</h2>
+            <ul>
+                <li>Linux</li>
+                <li>Docker</li>
             </ul>
         </div>
     </section>
@@ -73,10 +100,6 @@
                 </div>
             </div>
         </div>
-        
-    </section>
-    <section>
-        
     </section>
 </body>
 </html>
