--- a/index.html
+++ b/index.html
@@ -82,6 +82,20 @@
             </ul>
         </div>
     </section>
+    <section class="jobs">
+        <div class="container">
+            <h1 class="jobs-title" id="jobs">Jobs</h1>
+            <hr class="star-dark">
+            <h2>2018</h2>
+            <ul>
+                <li>Internship in Front End Developer at Loeffa Web Solutions</li>
+            </ul> 
+            <h2>2017</h2>
+            <ul>
+                <li>Internship in Technical Suport at Health Secretary-Sc</li>
+            </ul> 
+        </div>
+    </section>
     <section class="contact">
         <div class="container">
             <h1 class="contact-title" id="contact">Contact</h1>
