--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <nav class="site-nav">
                 <ul id="fix">
                     <li><a id="" href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#jobs">Jobs</a></li>
+                    <li><a href="#contact">Skills</a></li>
+                    <li><a href="#skills">Jobs</a></li>
+                    <li><a href="#jobs">Contact</a></li>
                 </ul>
             </nav>
             <div class="nav-social">
@@ -30,7 +30,7 @@
         <div class="container">
             <div class="intro-text">
                 <p class="intro-description">Hi I'm Vinicius Dias
-                <br>I'm a web Developer</p>
+                <br>I'm a Front-End Developer</p>
                 <hr class="star-bright">
             </div>
             <div class="social-media mx-auto d-block">
