Small fix in html and css

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <nav class="site-nav">
                 <ul id="fix">
                     <li><a id="" href="#projects">Projects</a></li>
-                    <li><a href="#contact">Skills</a></li>
-                    <li><a href="#skills">Jobs</a></li>
-                    <li><a href="#jobs">Contact</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#jobs">Jobs</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
             <div class="nav-social">
