--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <section class="home">
         <div class="container">
             <div class="intro-text">
-                <p class="intro-description">Hi I'm Vinicius Dias
-                <br>I'm a Front-End Developer</p>
+                <p class="intro-description">Hi! I'm Vinicius Dias
+                <br>Front-End Developer</p>
                 <hr class="star-bright">
             </div>
             <div class="social-media mx-auto d-block">
