--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -9,7 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 </head>
-<body>
+<body id="main">
     <header class="navbar fixed-top navbar-light">
             <a class="logo" href="#">ViniDias</a>
             <nav class="site-nav">
@@ -26,9 +25,9 @@
             </div>
     </header>
     <main>
-    <section class="home">
+    <section id="welcome-section">
         <div class="container">
-            <div class="intro-text">
+            <div id="title" class="intro-text">
                 <p class="intro-description">Hi! I'm Vinicius Dias
                 <br>Front-End Developer</p>
                 <hr class="star-bright">
@@ -99,10 +98,10 @@
         <div class="container">
             <h1 class="contact-title" id="contact">Contact</h1>
             <hr class="star-dark">
-                <div class="contact-text">
-                    <p>Connect with Vinicius Dias:</p>
+                <div id="img-div" class="contact-text">
+                    <p id="img-caption">Connect with Vinicius Dias:</p>
                     <p>vinicius-mdias@hotmail.com</p>
-                    <img src="img/eu.jpg" alt="myPhoto" class="mx-auto d-block img-home">
+                    <img id="image" src="img/eu.jpg" alt="myPhoto" class="mx-auto d-block img-home">
                 </div>
                 <div class="social-media mx-auto d-block">
                     <a class="btn btn-success" href="https://www.freecodecamp.org/viniciusmdias"><i class="fab fa-free-code-camp"></i> FreeCodeCamp</a>
@@ -115,5 +114,8 @@
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/main.js"></script>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+
 </body>
+
 </html>
