Add animated scroll to sections clicks.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body id="main">
     <header class="navbar fixed-top navbar-light">
-            <a class="logo" href="#">ViniDias</a>
+            <a class="logo" href="#main">ViniDias</a>
             <nav class="site-nav">
                 <ul id="fix">
-                    <li><a id="" href="#projects">Projects</a></li>
+                    <li><a href="#projects">Projects</a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#jobs">Jobs</a></li>
                     <li><a href="#contact">Contact</a></li>
