--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
             <hr class="star-dark">
             <h2>2018</h2>
             <ul>
+                <li><a href="https://viniciusmdias.github.io/conferenceProject/">conferenceTemplate</a></li>
+                <li><a href="https://github.com/ViniciusmDias/surveyForm">surveyForm</a></li>
                 <li><a href="https://github.com/ViniciusmDias/readingTyping">readingTyping</a></li>
-                <li><a href="https://github.com/ViniciusmDias/ronaldinhoTribute">ronaldinhoTribute</a></li>
+                <li><a href="https://viniciusmdias.github.io/ronaldinhoTribute/">ronaldinhoTribute</a></li>
                 <li><a href="https://github.com/ViniciusmDias/bootstrap">bootstrapTranslate</a></li>
             </ul> 
             <h2>2017</h2>
@@ -77,6 +79,7 @@
             <ul>
                 <li>Linux</li>
                 <li>Docker</li>
+                <li>Git</li>
             </ul>
         </div>
     </section>
