Add function scroll to document and add scroll-beahavior to header css.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <hr class="star-dark">
             <h2>2018</h2>
             <ul>
+                <li><a href="https://viniciusmdias.github.io/inspiringPhrases/">inspiringPhrases</a></li>
                 <li><a href="https://viniciusmdias.github.io/conferenceProject/">conferenceTemplate</a></li>
                 <li><a href="https://github.com/ViniciusmDias/surveyForm">surveyForm</a></li>
                 <li><a href="https://github.com/ViniciusmDias/readingTyping">readingTyping</a></li>
