--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#jobs">Jobs</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a href="ufsc.html">UFSC</a></li>
                 </ul>
             </nav>
             <div class="nav-social">
