Add working page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#jobs">Jobs</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="ufsc.html">UFSC</a></li>
+                    <li><a href="working.html">UFSC</a></li>
                 </ul>
             </nav>
             <div class="nav-social">
@@ -26,7 +26,6 @@
                 </a>
             </div>
     </header>
-    <main>
     <section id="welcome-section">
         <div class="container">
             <p class="intro-description">Hi! I'm Vinicius Dias
