Add content for page ufsc.html and small changes in others pages

--- a/ufsc.html
+++ b/ufsc.html
@@ -5,19 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/ufsc.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="css/ufsc.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 </head>
 <body id="main">
+    
     <header class="navbar fixed-top navbar-light">
-            <a class="logo" href="#main">ViniDias</a>
+            <a class="logo btn btn-outline-warning" href="index.html">ViniDias</a>
             <nav class="site-nav">
                 <ul id="fix">
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#jobs">Jobs</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li><a href="/ufsc.html">UFSC</a></li>
+                    <li><a href="working.html">INE5611</a></li>
+                    <li><a href="working.html">INE5612</a></li>
+                    <li><a href="working.html">INE5613</a></li>
+                    <li><a href="working.html">INE5659</a></li>
+                    <li><a href="working.html">INE5608</a></li>
                 </ul>
             </nav>
             <div class="nav-social">
@@ -25,10 +28,29 @@
                 </a>
             </div>
     </header>
-    <main>
-    </main>
+    <div class="container ufsc">
+        <h2>UFSC -2018 / 4º fase</h2>
+        <div class="container">
+            <p>Pretendo colocar aqui um pouco sobre cada matéria que eu fiz nessa fase,
+            <br>
+            esse material servirá de auxílio para meus estudos e para quem ajudar possa.
+            </p>
+        </div>
+        <section class="class">
+            <h2 class="class-title">Disciplinas</h1>
+            <hr class="star-dark">
+            <ul>
+                <li><a href="working.html">INE5611 - Sistemas Operacionais</a></li>
+                <li><a href="working.html">INE5612 - Desenvolvimento de Sistemas Orientados a Objetos II</a></li>
+                <li><a href="working.html">INE5613 - Banco de Dados I</a></li>
+                <li><a href="working.html">INE5659 - GETICS</a></li>
+                <li><a href="working.html">INE5608 - Análise e Projeto de Sistemas</a></li>
+            </ul> 
+        </section>
+    </div>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/main.js"></script>
+    </main>
 </body>
 </html>
