--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 </head>
 <body id="main">
     <header class="navbar fixed-top navbar-light">
-            <a class="logo" href="#main">ViniDias</a>
+            <a class="logo btn btn-outline-warning" href="index.html">ViniDias</a>
             <nav class="site-nav">
                 <ul id="fix">
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#jobs">Jobs</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="working.html">UFSC</a></li>
+                    <li><a href="ufsc.html">UFSC</a></li>
                 </ul>
             </nav>
             <div class="nav-social">
