--- a/ufsc.html
+++ b/ufsc.html
@@ -31,9 +31,9 @@
     <div class="container ufsc">
         <h2>UFSC -2018 / 4º fase</h2>
         <div class="container">
-            <p>Pretendo colocar aqui um pouco sobre cada matéria que eu fiz nessa fase,
+            <p>Pretendo colocar aqui um pouco sobre cada matéria que eu estou fazendo nessa fase,
             <br>
-            esse material servirá de auxílio para meus estudos e para quem ajudar possa.
+            esse material servirá de auxílio para meus estudos e para quem possa ajudar.
             </p>
         </div>
         <section class="class">
