--- a/working.html
+++ b/working.html
@@ -13,7 +13,7 @@
 <body id="main">
     
     <header class="navbar fixed-top navbar-light">
-            <a class="logo" href="#main">ViniDias</a>
+            <a class="logo btn btn-outline-warning" href="#main">ViniDias</a>
             <nav class="site-nav">
                 <ul id="fix">
                     <li><a href="index.html#projects">Projects</a></li>
