--- a/index.html
+++ b/index.html
@@ -9,28 +9,28 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 </head>
-<body id="main">
-    <header class="navbar fixed-top navbar-light">
-            <a class="logo btn btn-outline-warning" href="index.html">ViniDias</a>
-            <nav class="site-nav">
-                <ul id="fix">
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#jobs">Jobs</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li><a href="ufsc.html">UFSC</a></li>
-                </ul>
+<body>
+    <div id="particles-js">
+    </div>
+    <section class="welcome-section" id="welcome">    
+        <nav class="navbar fixed-top navbar-light">
+                <a class="logo btn btn-outline-warning" href="index.html">ViniDias</a>
+                <nav class="site-nav">
+                    <ul id="fix">
+                        <li><a href="#projects">Projects</a></li>
+                        <li><a href="#skills">Skills</a></li>
+                        <li><a href="#jobs">Jobs</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="ufsc.html">UFSC</a></li>
+                    </ul>
+                </nav>
+                <div class="nav-social">
+                    <a href="https://github.com/viniciusmdias" title="GitHub"><i class="fab fa-github"></i>
+                    </a>
+                </div>
             </nav>
-            <div class="nav-social">
-                <a href="https://github.com/viniciusmdias" title="GitHub"><i class="fab fa-github"></i>
-                </a>
-            </div>
-    </header>
-    <section id="welcome-section">
         <div class="container">
-            <p class="intro-description">Hi! I'm Vinicius Dias
-            <br>Front-End Developer</p>
-            <hr class="star-bright">
+            <p class="intro-description">Hello, I'm Vinicius Dias
             <div class="social-media mx-auto d-block">
                 <a class="btn btn-outline-success" href="https://www.freecodecamp.org/viniciusmdias">FreeCodeCamp</a>
                 <a class="btn btn-outline-warning" href="https://github.com/ViniciusmDias">Github</a>    
@@ -42,7 +42,6 @@
     <section class="projects">
         <div class="container">
             <h1 class="projects-title" id="projects">Projects</h1>
-            <hr class="star-dark">
             <h2>2018</h2>
             <ul>
                 <li><a href="https://viniciusmdias.github.io/inspiringPhrases/">inspiringPhrases</a></li>
@@ -61,7 +60,7 @@
     <section class="skills">
         <div class="container">
             <h1 class="skills-title" id="skills">Skills</h1>
-            <hr class="star-dark">
+            <br>
             <h2>Front End</h2>
             <ul>
                 <li>Html</li>
@@ -71,7 +70,6 @@
             </ul> 
             <h2>Back End</h2>
             <ul>
-                <li>nodeJs</li>
                 <li>Python</li>
                 <li>Django</li>
             </ul> 
@@ -86,7 +84,6 @@
     <section class="jobs">
         <div class="container">
             <h1 class="jobs-title" id="jobs">Jobs</h1>
-            <hr class="star-dark">
             <h2>2018</h2>
             <ul>
                 <li>Internship in Front End Developer at Loeffa Web Solutions</li>
@@ -97,25 +94,10 @@
             </ul> 
         </div>
     </section>
-    <section class="contact">
-        <div class="container">
-            <h1 class="contact-title" id="contact">Contact</h1>
-            <hr class="star-dark">
-                <div id="img-div" class="contact-text">
-                    <p id="img-caption">Connect with Vinicius Dias:</p>
-                    <p>vinicius-mdias@hotmail.com</p>
-                    <img id="image" src="img/eu.jpg" alt="myPhoto" class="mx-auto d-block img-home">
-                </div>
-                <div class="social-media mx-auto d-block">
-                    <a class="btn btn-success" href="https://www.freecodecamp.org/viniciusmdias"><i class="fab fa-free-code-camp"></i> FreeCodeCamp</a>
-                    <a class="btn btn-warning" href="https://github.com/ViniciusmDias"><i class="fab fa-github"></i> Github</a>    
-                    <a class="btn btn-warning" href="https://www.linkedin.com/in/vinicius-m-dias/"><i class="fab fa-linkedin"></i> LinkedIn</a>    
-                    <a class="btn btn-warning" href="https://www.instagram.com/diasvini10/">Instagram</a>    
-                </div>
-        </div>
-    </section>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/particles.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
