Small changes in index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
             </nav>
         <div class="container">
-            <p class="intro-description">Hello, I'm Vinicius Dias
+            <p class="intro-description">Hi, I'm Vinicius Dias
             <div class="social-media mx-auto d-block">
                 <a class="btn btn-outline-success" href="https://www.freecodecamp.org/viniciusmdias">FreeCodeCamp</a>
                 <a class="btn btn-outline-warning" href="https://github.com/ViniciusmDias">Github</a>    
