Fix  small bugs

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         </nav>
         <div class="container">
             <p class="intro-description">Hi, I'm Vinicius Dias
+                <br>I study information systems at UFSC
+            </p>
             <div class="social-media mx-auto d-block">
                 <a class="btn btn-outline-warning" href="https://github.com/ViniciusmDias">Github</a>    
                 <a class="btn btn-outline-warning" href="https://www.linkedin.com/in/vinicius-m-dias/">LinkedIn</a>
@@ -88,7 +90,7 @@
             </ul> 
             <h2>2017</h2>
             <ul>
-                <li>Internship in Technical Suport at Health Secretary-Sc</li>
+                <li>Internship in Technical Suportt at Health Secretary-Sc</li>
             </ul> 
         </div>
     </section>
