--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
                 </a>
             </div>
         </nav>
+
+        <div class="nodebot">
+            <div class="icon">
+                <div class="bobble"></div>
+                <div class="antenna"></div>
+                <div class="head">
+                    <div class="eye left"></div>
+                    <div class="eye right"></div>
+                </div>
+                <div class="neck"></div>
+                <div class="neck"></div>
+            </div>
+        </div>
         <div class="container">
             <p class="intro-description">Hi, I'm Vinicius Dias
                 <br>I study information systems at UFSC
